# slowOS

./: .gitignore  README.md
Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations- BWV 988 (Piano)/: Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 02 Variatio 1 a 1 Clav..m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 03 Variatio 2 a 1 Clav..m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 04 Variatio 3 a 1 Clav. Canone all Unisuono.m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 05 Variatio 4 a 1 Clav..m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 06 Variatio 5 a 1 ovvero 2 Clav..m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 07 Variatio 6 a 1 Clav. Canone alla Seconda.m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 08 Variatio 7 a 1 ovvero 2 Clav..m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 09 Variatio 8 a 2 Clav..m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 10 Variatio 9 a 1 Clav. Canone alla Terza.m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 11 Variatio 10 a 1 Clav. Fughetta.m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 12 Variatio 11 a 2 Clav..m4a  Kimiko Ishizaka - J.S. Bach- -Open- Goldberg Variations, BWV 988 (Piano) - 13 Variatio 12 Canone alla Quarta.m4a  (+15 more)
compositions/: README.md
slowLibrary/: aesops_fables.epub  (+26 more)
v0.1.0/: Cargo.toml  README.md  build.sh
v0.1.0/buildroot/package/slowos/: Config.in  slowos.mk
v0.1.0/credits/src/: app.rs  main.rs
v0.1.0/files/: Cargo.toml
v0.1.0/files/src/: app.rs  main.rs
v0.1.0/keymacros/: Cargo.toml
v0.1.0/keymacros/src/: app.rs  main.rs
v0.1.0/settings/: Cargo.toml
v0.1.0/settings/src/: app.rs  main.rs
v0.1.0/slowbooks/: Cargo.toml
v0.1.0/slowbooks/src/: app.rs  library.rs  main.rs  reader.rs
v0.1.0/slowbreath/: Cargo.toml
v0.1.0/slowbreath/src/: app.rs  main.rs
v0.1.0/slowcalc/: Cargo.toml
v0.1.0/slowcalc/src/: app.rs  main.rs
v0.1.0/slowchess/: Cargo.toml
v0.1.0/slowchess/src/: app.rs  chess.rs  main.rs
v0.1.0/slowcore/: Cargo.toml
v0.1.0/slowcore/src/: animation.rs  dither.rs  lib.rs  safety.rs  storage.rs  theme.rs  widgets.rs
v0.1.0/slowcredits/: Cargo.toml
v0.1.0/slowcredits/src/: app.rs  main.rs
v0.1.0/slowdate/: Cargo.toml
v0.1.0/slowdate/src/: app.rs  main.rs
v0.1.0/slowdesign/: Cargo.toml
v0.1.0/slowdesign/src/: app.rs  main.rs
v0.1.0/slowdesktop/: Cargo.toml
v0.1.0/slowdesktop/src/: desktop.rs  launcher.rs  main.rs  process_manager.rs
v0.1.0/slowfiles/: Cargo.toml
v0.1.0/slowfiles/src/: app.rs  main.rs
v0.1.0/slowmidi/: Cargo.toml
v0.1.0/slowmidi/src/: app.rs  main.rs
v0.1.0/slowmusic/: Cargo.toml
v0.1.0/slowmusic/src/: app.rs  main.rs
v0.1.0/slownotes/: Cargo.toml
v0.1.0/slownotes/src/: app.rs  main.rs
v0.1.0/slowpaint/: Cargo.toml
v0.1.0/slowpaint/src/: app.rs  canvas.rs  main.rs  tools.rs
v0.1.0/slowpics/: Cargo.toml
v0.1.0/slowpics/src/: app.rs  loader.rs  main.rs
v0.1.0/slowreader/: Cargo.toml
v0.1.0/slowreader/src/: app.rs  book.rs  library.rs  main.rs  reader.rs
v0.1.0/slowsheets/: Cargo.toml
v0.1.0/slowsheets/src/: app.rs  main.rs  sheet.rs
v0.1.0/slowslides/: Cargo.toml
v0.1.0/slowslides/src/: app.rs  main.rs
v0.1.0/slowsolitaire/: Cargo.toml
v0.1.0/slowsolitaire/src/: app.rs  main.rs
v0.1.0/slowterm/: Cargo.toml
v0.1.0/slowterm/src/: app.rs  main.rs
v0.1.0/slowtex/: Cargo.toml
v0.1.0/slowtex/src/: app.rs  main.rs
v0.1.0/slowview/: Cargo.toml
v0.1.0/slowview/src/: app.rs  loader.rs  main.rs
v0.1.0/slowwrite/: Cargo.toml
v0.1.0/slowwrite/src/: app.rs  document.rs  editor.rs  main.rs
v0.1.0/trash/: Cargo.toml
v0.1.0/trash/src/: app.rs  lib.rs  main.rs
v0.2.0/slowchess/: Cargo.toml
v0.2.0/slowchess/src/: app.rs
v0.2.0/slowmusic/: Cargo.toml
v0.2.0/slowmusic/src/: app.rs
v0.2.0/slowwrite/: Cargo.toml
v0.2.0/slowwrite/src/: app.rs  main.rs  rich_text.rs
v0.2.1/slowpaint/: Cargo.toml
v0.2.1/slowpaint/src/: app.rs  canvas.rs
v0.2.1/slowview/: Cargo.toml
v0.2.1/slowview/src/: app.rs  main.rs
v0.2.2/: Cargo.toml  build.sh
v0.2.2/buildroot/configs/: slowos_defconfig
v0.2.2/buildroot/package/slowos/: slowos.mk
v0.2.2/buildroot/rootfs_overlay/boot/: config.txt
v0.2.2/buildroot/rootfs_overlay/etc/init.d/: S99slowos
v0.2.2/buildroot/rootfs_overlay/root/.config/gtk-3.0/: settings.ini
v0.2.2/buildroot/rootfs_overlay/usr/share/icons/slow-cursor/: cursor.theme
v0.2.2/credits/src/: app.rs
v0.2.2/settings/src/: app.rs
v0.2.2/slowbreath/: Cargo.toml
v0.2.2/slowbreath/src/: app.rs
v0.2.2/slowcalc/: Cargo.toml
v0.2.2/slowcalc/src/: app.rs  main.rs
v0.2.2/slowchess/: Cargo.toml
v0.2.2/slowchess/src/: app.rs  chess.rs
v0.2.2/slowclock/: Cargo.toml
v0.2.2/slowclock/src/: main.rs
v0.2.2/slowcore/: Cargo.toml
v0.2.2/slowcore/src/: animation.rs  dither.rs  drag.rs  lib.rs  minimize.rs  repaint.rs  safety.rs  text_edit.rs  theme.rs  widgets.rs
v0.2.2/slowdesign/: Cargo.toml
v0.2.2/slowdesign/src/: app.rs  main.rs
v0.2.2/slowdesktop/: Cargo.toml
v0.2.2/slowdesktop/src/: desktop.rs
v0.2.2/slowfiles/: Cargo.toml
v0.2.2/slowfiles/src/: app.rs
v0.2.2/slowmidi/src/: app.rs  main.rs
v0.2.2/slowmusic/: Cargo.toml
v0.2.2/slowmusic/src/: app.rs  main.rs
v0.2.2/slownotes/: Cargo.toml
v0.2.2/slownotes/src/: app.rs
v0.2.2/slowpaint/: Cargo.toml
v0.2.2/slowpaint/src/: app.rs  tools.rs
v0.2.2/slowreader/: Cargo.toml
v0.2.2/slowreader/src/: app.rs  book.rs  library.rs  reader.rs
v0.2.2/slowsolitaire/: Cargo.toml
v0.2.2/slowsolitaire/src/: app.rs
v0.2.2/slowterm/: Cargo.toml
v0.2.2/slowterm/src/: app.rs
v0.2.2/slowview/: Cargo.toml
v0.2.2/slowview/src/: app.rs  loader.rs
v0.2.2/slowwrite/: Cargo.toml
v0.2.2/slowwrite/src/: app.rs  main.rs
v0.2.2/trash/: Cargo.toml
v0.2.2/trash/src/: app.rs
(+100 files in other folders)
