[workspace]
resolver = "2"
members = [
    "slowcore",
    "slowdesktop",
    "slowwrite",
    "slowpaint",
    "slowreader",
    "slowsheets",
    "slownotes",
    "slowchess",
    "slowfiles",
    "slowmusic",
    "slowslides",
    "slowtex",
    "trash",
    "slowterm",
    "slowpics",
    "credits",
    "slowmidi",
    "slowbreath",
    "settings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Slow Computer Company"]

[workspace.dependencies]
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
