[workspace]
resolver = "2"
members = [
    "slowcore",
    "slowdesktop",
    "slowwrite",
    "slowpaint",
    "slowreader",
    "slownotes",
    "slowchess",
    "slowfiles",
    "slowmusic",
    "slowslides",
    "slowtex",
    "trash",
    "slowterm",
    "slowview",
    "credits",
    "slowmidi",
    "slowbreath",
    "settings",
    "slowcalc",
    "slowdesign",
    "slowsolitaire",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Slow Computer Company"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
