[package]
name = "slowchess"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A chess game for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[[bin]]
name = "slowchess"
path = "src/main.rs"
