[package]
name = "slowdate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "slowdate"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
serde.workspace = true
serde_json.workspace = true
slowcore = { path = "../slowcore" }
chrono = "0.4"
