[package]
name = "slowdesktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SlowOS desktop shell — the System 6-inspired launcher and window manager"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name = "slowdesktop"
path = "src/main.rs"
