[package]
name = "slowmusic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal music player for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "slowmusic"
path = "src/main.rs"
