[package]
name = "slowpics"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal image viewer for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }

[[bin]]
name = "slowpics"
path = "src/main.rs"
