[package]
name = "slowreader"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal ebook reader for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
epub = "2.1"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }

[[bin]]
name = "slowreader"
path = "src/main.rs"
