[package]
name = "slowsheets"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal spreadsheet for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
arboard = "3"

[[bin]]
name = "slowsheets"
path = "src/main.rs"
