[package]
name = "slowsolitaire"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Klondike solitaire for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
image = "0.24"
rand = "0.8"

[[bin]]
name = "slowsolitaire"
path = "src/main.rs"
