[package]
name = "slowtex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal LaTeX editor for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
printpdf = "0.7"

[[bin]]
name = "slowtex"
path = "src/main.rs"
