[package]
name = "trash"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Trash bin for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "trash"
path = "src/lib.rs"

[[bin]]
name = "trash"
path = "src/main.rs"
