[package]
name = "slowchess"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A chess game for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name = "slowchess"
path = "src/main.rs"
