[package]
name = "slowmusic"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A minimal music player for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
rodio = { version = "0.19", features = ["symphonia-aac", "symphonia-isomp4"] }
symphonia = { version = "0.5", features = ["aac", "isomp4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
id3 = "1"
lofty = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[[bin]]
name = "slowmusic"
path = "src/main.rs"
