[package]
name = "slowwrite"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A minimal word processor for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
ropey = "1.6"              # Efficient text rope data structure
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.10"
arboard = "3"              # Clipboard support

[[bin]]
name = "slowwrite"
path = "src/main.rs"
