[package]
name = "slowview"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A minimal image and PDF viewer for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
trash = { path = "../trash" }
egui = "0.27"
eframe = "0.27"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
lopdf = "0.33"
hayro = "0.5"

[[bin]]
name = "slowview"
path = "src/main.rs"
