[package]
name = "slowcore"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Core library for Slow Computer applications"

[dependencies]
egui = "0.27"
eframe = "0.27"
tiny-skia = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
thiserror = "1"
