[package]
name = "slowdesign"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "A WYSIWYG document design application for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
egui = "0.27"
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
ab_glyph = "0.2"
printpdf = "0.7"
dirs = "5"

[[bin]]
name = "slowdesign"
path = "src/main.rs"
