[package]
name = "slowfiles"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "A minimal file explorer for the Slow Computer"

[dependencies]
slowcore = { path = "../slowcore" }
trash = { path = "../trash" }
egui = "0.27"
eframe = "0.27"
chrono = "0.4"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name = "slowfiles"
path = "src/main.rs"
